--- a/canvas.html
+++ b/canvas.html
@@ -41,11 +41,11 @@
         var pressing = false
 
         var img = new Image();
-        img.src = "character.jpg"
+        img.src = "./character.jpg"
         var cloud = new Image();
-        cloud.src = "cloud.jpg";
+        cloud.src = "./cloud.jpg";
         var background = new Image();
-        background.src = "bg.jpg";
+        background.src = "./bg.jpg";
 
         class Stair{
             pos = 0
