--- a/canvas.html
+++ b/canvas.html
@@ -37,11 +37,11 @@
         var pressing = false
 
         var img = new Image();
-        img.src = "https://github.com/MinhPhamNhat/ninja/blob/main/character.jpg"
+        img.src = "https://github.com/MinhPhamNhat/ninja/blob/main/character.jpg?raw=true"
         var cloud = new Image();
-        cloud.src = "https://github.com/MinhPhamNhat/ninja/blob/main/cloud.jpg";
+        cloud.src = "https://github.com/MinhPhamNhat/ninja/blob/main/cloud.jpg?raw=true";
         var background = new Image();
-        background.src = "https://github.com/MinhPhamNhat/ninja/blob/main/bg.jpg";
+        background.src = "https://github.com/MinhPhamNhat/ninja/blob/main/bg.jpg?raw=true";
 
         class Stair{
             pos = 0
@@ -179,7 +179,7 @@
             }
             cloud.onload = function(){
             }
-            bg.onload = function(){
+            background.onload = function(){
             }
             window.addEventListener('keypress', (e) => {
                 if (!pressing){
