--- a/canvas.html
+++ b/canvas.html
@@ -19,16 +19,16 @@
             return new Promise(resolve => setTimeout(resolve, ms));
         }
         const btnClick = async (btn)=>{
-            btn.src = "btn2.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn2.png?raw=true";
             draw()
             await sleep(25)
-            btn.src = "btn3.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn3.png?raw=true";
             draw()
             await sleep(25)
-            btn.src = "btn2.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn2.png?raw=true";
             draw()
             await sleep(25)
-            btn.src = "btn1.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn1.png?raw=true";
             draw()
             await sleep(25)
         }
@@ -60,15 +60,15 @@
         var mobile = false
 
         var img = new Image();
-        img.src = "https://github.com/MinhPhamNhat/ninja/blob/main/character.jpg?raw=true"
+        img.src = "https://github.com/MinhPhamNhat/ninja/blob/main/character.jpg?raw=true";
         var cloud = new Image();
         cloud.src = "https://github.com/MinhPhamNhat/ninja/blob/main/cloud.jpg?raw=true";
         var background = new Image();
         background.src = "https://github.com/MinhPhamNhat/ninja/blob/main/bg.jpg?raw=true";
         var rightBtn = new Image();
-        rightBtn.src = "btn1.png";
+        rightBtn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn1.png?raw=true";
         var leftBtn = new Image();
-        leftBtn.src = "btn1.png";
+        leftBtn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn1.png?raw=true";
 
         class Stair{
             pos = 0
