--- a/canvas.html
+++ b/canvas.html
@@ -22,16 +22,16 @@
             return new Promise(resolve => setTimeout(resolve, ms));
         }
         const btnClick = async (btn)=>{
-            btn.src = "btn2.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn2.png?raw=true"
             draw()
             await sleep(25)
-            btn.src = "btn3.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn3.png?raw=true"
             draw()
             await sleep(25)
-            btn.src = "btn2.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn2.png?raw=true"
             draw()
             await sleep(25)
-            btn.src = "btn1.png"
+            btn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn1.png?raw=true"
             draw()
             await sleep(25)
         }
@@ -69,9 +69,9 @@
         var background = new Image();
         background.src = "https://github.com/MinhPhamNhat/ninja/blob/main/bg.jpg?raw=true";
         var rightBtn = new Image();
-        rightBtn.src = "btn1.png";
+        rightBtn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn1.png?raw=true";
         var leftBtn = new Image();
-        leftBtn.src = "btn1.png";
+        leftBtn.src = "https://github.com/MinhPhamNhat/ninja/blob/main/btn1.png?raw=true";
 
         class Stair{
             pos = 0
@@ -119,7 +119,7 @@
             
             ctx.fillStyle = "black";
             ctx.font = "30px Comic Sans MS";
-            ctx.fillText(`Use [S] to turn and [K] to go straight`, 10, canvas.height-20);
+            ctx.fillText(`Use [S] or [left button] to turn and [K] or [right button]to go straight`, 10, canvas.height-20);
         }
 
         const drawStairs = () => {
